<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.simple</groupId>
  <artifactId>junitproject</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>Simple JUnit Project</name>
  
  <properties>
  	<java.version>11</java.version>
  	<junit-platform.version>5.6.2</junit-platform.version>
  </properties>
  
  <dependencies>
  	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
	<dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-api</artifactId>
	    <version>${junit-platform.version}</version>
	    <scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
	<dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-engine</artifactId>
	    <version>${junit-platform.version}</version>
	    <scope>test</scope>
	</dependency>
	<dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-params</artifactId>
	    <version>${junit-platform.version}</version>
	    <scope>test</scope>
	</dependency>
  </dependencies>
  
  <build>
  	<plugins>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-compiler-plugin</artifactId>
  			<version>3.8.1</version>
  			<configuration>
               <source>${java.version}</source>
               <target>${java.version}</target>
            </configuration>
  		</plugin>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-surefire-plugin</artifactId>
  			<version>3.0.0-M5</version>
  			<configuration>
  				<argLine>
  					--illegal-access=permit
  				</argLine>
  				<!--  to run specific group of tests based on tag
  				<groups>Person</groups>
  				<excludedGroups>Person</excludedGroups>
  				-->
  			</configuration>
  		</plugin>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-failsafe-plugin</artifactId>
  			<version>3.0.0-M5</version>
  			<configuration>
  				<argLine>
  					--illegal-access=permit
  				</argLine>
  			</configuration>
  		</plugin>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-site-plugin</artifactId>
  			<version>3.9.1</version>
  		</plugin>
  	</plugins>
  </build> 
  <reporting>
  	<plugins>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-surefire-report-plugin</artifactId>
  			<version>3.0.0-M5</version>
  		</plugin>
  	</plugins>
  </reporting>
</project>